fixing jquery issues

--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/progress.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/progress.html
@@ -1,12 +1,13 @@
 
 {% block content %}
-			<tr>
-				<td class="progress_stage_head" colspan="8" align="center"><h3>Currently at Stage</h3></td>
+			
+            <tr>
+				<td class="progress_stage_head{{obj.id}}" colspan="8" align="center"><h3>Currently at Stage</h3></td>
 			</tr>
     		<tr>
-    			<td class="progress_stage" colspan="8" align="center"></td>
+    			<td class="progress_stage{{obj.id}}" colspan="8" align="center"></td>
     		</tr>
-			<tr class="progress_head">
+			<tr class="progress_head{{obj.id}}">
     			<th>Process ID</th>
 				<th>Names extracted</th>
 				<th>Titles extracted</th>
@@ -16,7 +17,7 @@
 				<th>Name Enrichment Progress</th>
 				<th>Title Enrichment Progress</th>
     		</tr>
-    		<tr class="progress_row">
+    		<tr class="progress_row{{obj.id}}">
 				<td>N/A</td>
 				<td>N/A</td>
 				<td>N/A</td>
@@ -26,5 +27,10 @@
 				<td>N/A</td>
 				<td>N/A</td>
 			</tr>
+			<tr>
+				<td colspan="8" align="center">
+					<hr class="divider">
+				</td>
+			</tr>			
 
 {% endblock %}
