--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/processing.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/processing.html
@@ -32,32 +32,7 @@
             <tr>
             	<td class="overall_progress{{obj.id}}" colspan="8" align="center"></td>
             </tr>
-            <tr>
-				<td class="progress_stage_head" colspan="8" align="center"><h3>Currently at Stage</h3></td>
-			</tr>
-    		<tr>
-    			<td class="progress_stage{{obj.id}}" colspan="8" align="center"></td>
-    		</tr>
-			<tr class="progress_head">
-    			<th>Process ID</th>
-				<th>Names extracted</th>
-				<th>Titles extracted</th>
-				<th>Personal names</th>
-				<th>Corporate names</th>
-				<th>MARC to BIBFRAME conversion Progress</th>
-				<th>Name Enrichment Progress</th>
-				<th>Title Enrichment Progress</th>
-    		</tr>
-    		<tr class="progress_row{{obj.id}}">
-				<td>N/A</td>
-				<td>N/A</td>
-				<td>N/A</td>
-				<td>N/A</td>
-				<td>N/A</td>
-				<td>N/A</td>
-				<td>N/A</td>
-				<td>N/A</td>
-			</tr>			
+            {% include 'webapp/includes/progress.html' %}
           {% endfor %}
         </table>
 <p><a href="{% url 'index' %}">Return to home</a></p>
