--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/progress.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/progress.html
@@ -2,10 +2,25 @@
 {% block content %}
 			
             <tr>
-				<td class="progress_stage_head{{obj.id}}" colspan="8" align="center"><h3>Currently at Stage</h3></td>
+				<td class="progress_stage_head{{obj.id}}" colspan="8" align="center"><h3>Processing Progress</h3></td>
 			</tr>
     		<tr>
-    			<td class="progress_stage{{obj.id}}" colspan="8" align="center"></td>
+    			<td class="progress_stage{{obj.id}}" colspan="8" align="center">
+    				<div class="progress-container"> 
+			            <div class="wrapper"> 
+			            	<div class="progress-nav">
+			                      <div class="stage MARC_to_MARC-XML current"><span>MARC to MARC/XML</span></div>
+			                      <div class="stage MARC-XML_to_BIBFRAME"><span>MARC/XML to BIBFRAME</span></div>
+			                      <div class="stage Extracting_names/titles"><span>Extracting names/titles</span></div>
+			                      <div class="stage Enriching_names"><span>Enriching names</span></div>
+			                      <div class="stage Enriching_titles"><span>Enriching titles</span></div>
+			                      <div class="stage Optimization"><span>Optimization</span></div>
+			                      <div class="stage Writing_to_BIBFRAME"><span>Writing to BIBFRAME</span></div>
+			                  </div>
+			            </div>
+			            <div class="stage completed"><span></span></div>
+			        </div>
+    			</td>
     		</tr>
 			<tr class="progress_head{{obj.id}}">
     			<th>Process ID</th>
