enhancing processing Phase view

--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/progress.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/progress.html
@@ -18,7 +18,7 @@
 			                      <div class="stage Writing_to_BIBFRAME"><span>Writing to BIBFRAME</span></div>
 			                  </div>
 			            </div>
-			            <div class="stage completed"><span></span></div>
+			            <div class="stage results"><span></span></div>
 			        </div>
     			</td>
     		</tr>
