--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/processing.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/processing.html
@@ -25,7 +25,7 @@
               <td>{{ obj.file_format }}</td>
               <td><form action="{% url 'stop' id=obj.id %}" method="POST">
                   {% csrf_token %}
-                  <input class="btn btn-default btn-danger" type="submit" value="Stop Process" onclick="return confirm('Are you sure you want to stop processing {{ obj.name }}?')"/>
+                  <input class="btn btn-default btn-danger" type="submit" value="Stop/Delete Process" onclick="return confirm('Are you sure you want to stop processing {{ obj.name }}? All the processed files will be removed from disk!!!')"/>
                 </form></td>
             	<td><button class="btn btn-default btn-danger" type="submit" name="view_progress" objid="{{obj.id}}">Progress Details</button></td>
             </tr>
