--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/stop.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/stop.html
@@ -4,7 +4,7 @@
 <div class="container">
  <div class="alert alert-success alert-dismissible">
     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-    <strong>Success!</strong> The process was terminated.
+    <strong>Success!</strong> The process was terminated and processed files were removed.
   </div>
   <p><a href="{% url 'processingQueue' %}">Return to processing page</a></p>
 </div>
