--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/base.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/base.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="{% static 'Webapp/css/bootstrap.min.css' %}" type = "text/css"/>
 	<link rel="stylesheet" href="{% static 'Webapp/css/styles.css' %}" type = "text/css"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="{% static 'Webapp/js/bootstrap.min.js' %}"></script>
   </head>
   <body>
   	<body class ="body">
