adding multi file processing (file merging) for BIBFRAME

--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/index.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/index.html
@@ -91,6 +91,9 @@
               </tr>
             {% endif %}
           {% endfor %}
+          <tr>
+            <td><input type="checkbox" class="bib_merge" name="merge" value="merge">Merge BIBFRAME files for processing?</td>
+          </tr>
         {% endifequal %}
           
         </table>
