--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/archive_P.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/archive_P.html
@@ -2,7 +2,7 @@
 {% block content %}
 	<tr class="progress_table{{obj.id}}">
 		<td colspan="8" align="center">
-			<table class="table table-hover" style="background: #eee; width: 95%; margin: 0 auto;">
+			<table class="table table-hover" style="background: #eee; width: 95%; margin-left: 2%;">
 		        <tr>
 					<td class="progress_stage_head{{obj.id}}" colspan="8" align="center"><h3>Processing Details</h3></td>
 				</tr>
