--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/marc_progress_archive.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/marc_progress_archive.html
@@ -31,7 +31,7 @@
 		<th>Title Enriched</th>
 	</tr>
 	<tr class="progress_row{{obj.id}}">
-		<td>N/A</td>
+		<td>{{ obj.process_ID }}</td>
 		<td>{{ obj.all_names }}</td>
 		<td>{{ obj.all_titles }}</td>
 		<td>{{ obj.p_names }}</td>
