fixing minor issues

--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/arc_del.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/arc_del.html
@@ -6,6 +6,6 @@
     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
     <strong>Success!</strong> The process archive record was deleted and processed files were removed.
   </div>
-  <p><a href="{% url 'delete_archive' %}">Return to Archives page</a></p>
+  <p><a href="{% url 'archive' %}">Return to Archives page</a></p>
 </div>
 {% endblock %}
