--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/marc_progress_archive.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/marc_progress_archive.html
@@ -7,16 +7,16 @@
 			<div class="progress-container"> 
 	            <div class="wrapper"> 
 	            	<div class="progress-nav">
-	                      <div class="stage MARC_to_MARC-XML current"><span>MARC to MARC/XML</span></div>
-	                      <div class="stage MARC-XML_to_BIBFRAME"><span>MARC/XML to BIBFRAME</span></div>
-	                      <div class="stage Extracting_names/titles"><span>Extracting names/titles</span></div>
-	                      <div class="stage Enriching_names"><span>Enriching names</span></div>
-	                      <div class="stage Enriching_titles"><span>Enriching titles</span></div>
-	                      <div class="stage Optimization"><span>Optimization</span></div>
-	                      <div class="stage Writing_to_BIBFRAME"><span>Writing to BIBFRAME</span></div>
+	                      <div class="stage MARC_to_MARC-XML done"><span>MARC to MARC/XML</span></div>
+	                      <div class="stage MARC-XML_to_BIBFRAME done"><span>MARC/XML to BIBFRAME</span></div>
+	                      <div class="stage Extracting_names/titles done"><span>Extracting names/titles</span></div>
+	                      <div class="stage Enriching_names done"><span>Enriching names</span></div>
+	                      <div class="stage Enriching_titles done"><span>Enriching titles</span></div>
+	                      <div class="stage Optimization done"><span>Optimization</span></div>
+	                      <div class="stage Writing_to_BIBFRAME done"><span>Writing to BIBFRAME</span></div>
 	                  </div>
 	            </div>
-	            <div class="stage results"><span></span></div>
+	            <div class="stage results completed"><span>{{ obj.stage }}</span></div>
 	        </div>
 		</td>
 	</tr>
