--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/index.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/index.html
@@ -10,10 +10,10 @@
     <h4 class= "text-center">Select a file type to uplaod</h4>
     <div class="file-type-selector">
     <div class= "form-check form-check-inline">
-      <label class="form-check-label" id="marc_select">MARC <span class="badge badge-pill badge-danger">.mrc</span>
+      <label class="form-check-label" id="marc_select"> MARC <span class="badge badge-pill badge-danger">.mrc</span>
         <input class="form-check-input marc" type="radio" name="file_format">
       </label>
-      <label class="form-check-label" id=bib_select>BIBFRAME <span class="badge badge-pill badge-danger">.xml</span>
+      <label class="form-check-label" id=bib_select> BIBFRAME <span class="badge badge-pill badge-danger">.xml</span>
         <input class="form-check-input bib" type="radio" name="file_format">
       </label>
       </div>
@@ -174,7 +174,7 @@
           </tr>
           </table>
         </div>
-          <br>
+          <br><hr>
             <button class="btn btn-default btn-danger btn-lg btn-block process_button" style="width: 50%; margin: 0 auto; margin-bottom: 10px;" type="submit">PROCESS</button>
           </form>
           <form action="{% url 'processingQueue' %}" method="POST">
@@ -183,7 +183,7 @@
           </form>
           <form action="{% url 'archive' %}" method="POST">
             {% csrf_token %}
-            <input class="btn btn-default btn-secondary btn-lg btn-block" style="width: 50%; margin: 0 auto; margin-bottom: 10px;" type="submit" value="Visit Processing Archive"/>
+            <input class="btn btn-default btn-secondary btn-lg btn-block" style="width: 50%; margin: 0 auto; margin-bottom: 10px;" type="submit" value="Visit Processing Archive ({{ processing_archive|length }} items)"/>
           </form>
      
     {% endif %}
