--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/index.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/index.html
@@ -146,7 +146,7 @@
           </tr>
           <tr>
             <td>
-                <input class="search_api_VFP api_selected" type="checkbox" name="search-API-selector" value="search_api_VF">
+                <input class="search_api_VFP api_selected" type="checkbox" name="search-API-selector" value="search_api_VFP">
             </td>
             <td>
               <label id=viaf>VIAF Personal names API </label>
@@ -160,7 +160,7 @@
           </tr>
           <tr>
             <td>
-                <input class="search_api_VFC api_selected" type="checkbox" name="search-API-selector" value="search_api_VF">
+                <input class="search_api_VFC api_selected" type="checkbox" name="search-API-selector" value="search_api_VFC">
             </td>
             <td>
               <label id=viaf>VIAF Corporate names API </label>
