--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/archive.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/archive.html
@@ -35,6 +35,14 @@
             </tr>
             {% include 'webapp/includes/archive_P.html' %}
           {% endfor %}
+          <tr>
+          	<td colspan="8">
+          		<form action="{% url 'delete_archive_all' %}" method="POST">
+                  {% csrf_token %}
+                  <input class="btn btn-default btn-danger" type="submit" value="Remove All" onclick="return confirm('Are you sure you want remove all items from archives? All the processed files will be removed from disk!!!')"/>
+                </form>
+          	</td>
+          </tr>
         </table>
 <p><a href="{% url 'index' %}">Return to home</a></p>
 {% else %}
