fixing API stat modal issue

--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/bib_progress_archive.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/includes/bib_progress_archive.html
@@ -57,7 +57,9 @@
 						</tr>
 						<tr>
 							<td>{{obj.search_api_LC}} ({{ obj.search_api_LC|get_perc:obj.all_names }}%)</td>
-							<td>{{obj.search_api_LCS}} ({{ obj.search_api_LCS|get_perc:obj.all_names }}%)</td>
+							<td>{{obj.search_api_LCS}} 
+									({{ obj.search_api_LCS|get_perc:obj.all_names }}%)
+							</td>
 							<td>{{obj.search_api_VF}} ({{ obj.search_api_VF|get_perc:obj.all_names }}%)</td>
 							<td>{{obj.search_api_VFP}} ({{ obj.search_api_VFP|get_perc:obj.all_names }}%)</td>
 							<td>{{obj.search_api_VFC}} ({{ obj.search_api_VFC|get_perc:obj.all_names }}%)</td>
