changes for deployment

--- a/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/base.html
+++ b/metadata-wrangling/BIBFRAME/Converter/APP-WIP/Django-based/BIBFRAME_Converter/Webapp/templates/webapp/base.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Simple File Upload</title>
+    <title>UAL Linked Data Enrichment</title>
     {% load staticfiles %}
 	<link rel="stylesheet" href="{% static 'Webapp/css/bootstrap.min.css' %}" type = "text/css"/>
 	<link rel="stylesheet" href="{% static 'Webapp/css/styles.css' %}" type = "text/css"/>
+	<link rel="shortcut icon" type="image/jpg" href="{% static 'Webapp/img/favicon.ico' %}"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="{% static 'Webapp/js/bootstrap.min.js' %}"></script>
   </head>
