--- a/templates/letter_template-tei.xml
+++ b/templates/letter_template-tei.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?xml-stylesheet type="text/css" href="http://cwrc.ca/templates/css/tei.css"?>
-<?xml-model href="tei_lite.rng" type="application/xml" schematypens="http://relaxng.org/ns/structure/1.0"?>
+<?xml-model href="https://raw.githubusercontent.com/ualbertalib/metadata/master/templates/tei_lite.rng" type="application/xml" schematypens="http://relaxng.org/ns/structure/1.0"?>
+<?xml-stylesheet type="text/css" href="https://raw.githubusercontent.com/ualbertalib/metadata/master/templates/tei.css"?>
 <TEI xmlns="http://www.tei-c.org/ns/1.0">
     <teiHeader>
         <fileDesc>
@@ -10,8 +10,8 @@
             <publicationStmt>
                 <p>University of Alberta Library, Sir Samuel Steele Collection</p>
             </publicationStmt>
-            <sourceDesc sameAs="http://www.cwrc.ca">
-                <p>Created by University of Alberta staff from digitized materials in the <ref target="https://steele.library.ualberta.ca/">Sir Samuel Steele Collection</ref> unless otherwise noted.</p>
+            <sourceDesc>
+                <p>Created by <ref target="https://library.ualberta.ca/">University of Alberta Library</ref> staff from digitized materials in the <ref target="https://steele.library.ualberta.ca/">Sir Samuel Steele Collection</ref> unless otherwise noted.</p>
             </sourceDesc>
         </fileDesc>
     </teiHeader>
@@ -21,12 +21,13 @@
                 <head>
                     <title>Sample Letter Title</title>
                 </head>
+                <pb n="1"/>
                 <opener>
                     <note type="setting">
                         <p>Some opening note describing the writing location.</p>
                     </note>
                     <dateline>
-                        <date>Some date (set date value in attribute).</date>
+                        <date when="2020-12-31">Some date (set date value in attribute).</date>
                     </dateline>
                     <salute>Some salutation, e.g. "Dearest <persName sameAs="https://www.wikidata.org/wiki/Q435487">Miquel</persName>"</salute>
                 </opener>
